# PersonalDataPoison

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: base.yaml  logging.yaml
configs/profiles/: desktop.yaml  mobile.yaml  research.yaml
scripts/: bootstrap.py  manage_accounts.py  seed_identities.py
src/: app.py
src/accounts/: login.py  store.py
src/browser/: behavior_engine.py  controller.py  navigation.py  profiles.py
src/config/:  base.yaml  loader.py  schema.py  validators.py
src/core/: event_bus.py  lifecycle.py  orchestrator.py  plugin_loader.py
src/fingerprint/: consistency.py  manager.py  validators.py
src/identity/: generator.py  models.py  persistence.py  scoring.py
src/network/: dns.py  proxy_pool.py  session_manager.py  transport.py
src/plugins/: base.py
src/storage/: models.py  repository.py  sqlite.py
src/telemetry/: logging_config.py  metrics.py  tracing.py
src/timing/: circadian.py  distributions.py  scheduler.py
tests/unit/: test_config.py  test_event_bus.py  test_fingerprint.py  test_identity.py  test_platforms.py  test_storage.py  test_timing.py
