[project]
name = "personal-data-poison"
version = "0.1.0"
description = "Framework for generating persistent digital identities and realistic web traffic patterns"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "playwright>=1.40",
    "pydantic>=2.5",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.19",
    "pyyaml>=6.0",
    "faker>=22.0",
    "structlog>=24.0",
    "aiohttp>=3.9",
    "cryptography>=42.0",
    "jsonschema>=4.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.2",
]

[project.scripts]
pdp = "app:main"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
